Issue: Main "hero" image attributes modified to end slight distortion
Project rubric states that if a CSS framework is used, classes provided
by the CSS framework are used to make images responsive, otherwise
media-queries are used to ensure responsiveness of images. Tried to use
<picture> tag but it did not work with Chrome

--- a/css/portfolio-huge.css
+++ b/css/portfolio-huge.css
@@ -271,15 +271,21 @@ aside {
 }
 
 .hero-photo {
+  max-width: 100%;
   height: auto;
-  /* width: 100%; */
+  margin-left: 5.8px;
 }
 
 .one-photo {
   /* width: auto;     */
   /* height: 35vmin;  */
-  max-width: 280px;
+  width: 280px;
   height: auto;
+  /* Left Align Images look goofy when
+   * really stretched out -- center them instead
+   */
+  margin-left: 0;
+  margin-right: 5.4vmin;
 }
 
 .box11 {
@@ -287,11 +293,11 @@ aside {
   margin: 8px;
   border: 5px;
   border-color: white;
+  margin-left: 0;
+  margin-right: 5.4vmin;
 }
 
 .gHero {
-  max-height: 40vmin;
-  overflow: hidden;       /* Clip Photo Ultra High Viewport */
   grid-column-start: 2;
   grid-column-end: 5;
   grid-row-start: 1;
@@ -300,11 +306,11 @@ aside {
 
 .font-section-title {
   /* font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif; */
-	font-size: 20px;
+	font-size: 28px;
   /* font-style: normal;
 	/* font-variant: normal;
 	/* font-weight: 500; */
-	line-height: 22px;
+	line-height: 30px;
   vertical-align: top;
   text-align: left;
   color: #7d97ad;
@@ -319,7 +325,7 @@ aside {
 	line-height: 24px;
   /* vertical-align: top;        */
   /* text-transform: uppercase;  */
-  text-align:center;
+  text-align:left;
   color: #2d3c49;
 }
 
@@ -331,6 +337,6 @@ aside {
 	/* font-weight: 500;
 	/* line-height: 12px;
   /* vertical-align: top;  */
-  text-align:center;
+  text-align:left;
   /* color: #2d3c49; */
 }
